--- a/index.html
+++ b/index.html
@@ -9,16 +9,71 @@
 </head>
 <body>
     <nav>
-
+        <ul>
+            <li>Home</li>
+            <li>About</li>
+            <li>Projects</li>
+            <li>Contact</li>
+        </ul>
     </nav>
     <header>
-
+        <h1>Lucas Pasqualoni</h1>
+        <h2>GTA based web developer</h2>
+        <button>get in touch</button>
     </header>
     <main>
+        <section>
+            <h3>about me</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae veniam maxime dolor nostrum quos molestias excepturi, nesciunt magnam sint quisquam adipisci corporis ad placeat mollitia.</p>
+        </section>
+        <section>
+            <h4>skills</h4>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </section>
+        <section>
+            <h5>projects</h5>
+            <div>
+                <h5>project title here</h5>
+                <h6>languages used here</h6>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui, ex?</p>
+                <button>view live</button>
+                <button>view code</button>
+            </div>
+            <div>
+                <h5>project title here</h5>
+                <h6>languages used here</h6>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui, ex?</p>
+                <button>view live</button>
+                <button>view code</button>
+            </div>
+            <div>
+                <h5>project title here</h5>
+                <h6>languages used here</h6>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui, ex?</p>
+                <button>view live</button>
+                <button>view code</button>
+            </div>
+        </section>
+        <section>
+            <h7>get in touch</h7>
+            <div>
 
+            </div>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quo tenetur, eaque optio aliquid sunt provident neque? Praesentium saepe quae doloremque!</p>
+            <div>
+
+            </div>
+            <button>submit</button>
+        </section>
     </main>
     <footer>
-
+        <h8>Built in 2022 by Lucas Pasqualoni</h8>
     </footer>
 </body>
 </html>
