--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 <body>
     <nav id="nav" class="nav">
         <ul class="wrapper navBar">
-            <li>Home</li>
-            <li>About</li>
-            <li>Projects</li>
-            <li>Contact</li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Projects</a></li>
+            <li><a href="#">Contact</a></li>
         </ul>
     </nav>
     <header id="header" class="header">
-        <div class="wrapper">
+        <div class="wrapper headerAlign">
             <h1>Lucas Pasqualoni</h1>
             <h2>GTA based web developer</h2>
             <button>get in touch</button>
@@ -26,15 +26,15 @@
     </header>
     <main>
         <section id="about" class="about">
-            <div class="wrapper">
+            <div class="wrapper aboutAlign">
                 <h3>about me</h3>
                 <p>Graphic design is my passion</p>
             </div>
         </section>
         <section id="skills" class="skills">
-            <div class="wrapper">
+            <div class="wrapper skillsAlign">
                 <h4>skills</h4>
-                <div>
+                <div class="skillsFlex">
                     <div>
                         <i class="fa-brands fa-html5"></i>
                         <p>HTML</p>
@@ -63,11 +63,11 @@
             </div>
         </section>
         <section id="projects" class="projects">
-            <div class="wrapper">
+            <div class="wrapper projectsAlign">
                 <h5>projects</h5>
                 <div>
                     <img src="projectImg.jpg" alt="placeholder image for project">
-                    <div>
+                    <div class="projectsBox">
                         <h5>project title here</h5>
                         <h6>languages used here</h6>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui, ex?</p>
@@ -77,7 +77,7 @@
                 </div>
                 <div>
                     <img src="projectImg.jpg" alt="placeholder image for project">
-                    <div>
+                    <div class="projectsBox">
                         <h5>project title here</h5>
                         <h6>languages used here</h6>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui, ex?</p>
@@ -87,7 +87,7 @@
                 </div>
                 <div>
                     <img src="projectImg.jpg" alt="placeholder image for project">
-                    <div>
+                    <div class="projectsBox">
                         <h5>project title here</h5>
                         <h6>languages used here</h6>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui, ex?</p>
@@ -98,9 +98,9 @@
             </div>
         </section>
         <section id="contact" class="contact">
-            <div class="wrapper">
+            <div class="wrapper contactAlign">
                 <h7>get in touch</h7>
-                <div>
+                <div class="navBar">
                     <i class="fa-brands fa-linkedin"></i>
                     <i class="fa-brands fa-github"></i>
                     <i class="fa-brands fa-twitter"></i>
@@ -115,7 +115,7 @@
         </section>
     </main>
     <footer id="footer" class="footer">
-        <div class="wrapper">
+        <div class="wrapper footerAlign">
             <h8>Built in 2022 by Lucas Pasqualoni</h8>
         </div>
     </footer>
