about me section completed

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <section id="about" class="about">
             <div class="wrapper aboutAlign">
                 <h3>about me</h3>
-                <p>Graphic design is my passion</p>
+                <p>I'm a fresh-faced and eager new front-end developer based within the Greater Toronto Area, ready to ply the hard-earned skills I have acquired through the wonderful Juno College of Technology. I am a commited team-player who is ready and able to adapt to dynamic situations and am flexible in my work ethic - I work hard, and play even harder! When I'm not at my computer working away at a projct you can usually find me with a good book or watching some of my favourite TV shows like Better Call Saul, the Wire, Breaking Bad and various HBO miniseries.</p>
             </div>
         </section>
         <section id="skills" class="skills">
