--- a/index.html
+++ b/index.html
@@ -36,27 +36,27 @@
                 <h4>skills</h4>
                 <div class="skillsFlex">
                     <div>
-                        <i class="fa-brands fa-html5"></i>
+                        <i class="fa-brands fa-html5 fa-8x"></i>
                         <p>HTML</p>
                     </div>
                     <div>
-                        <i class="fa-brands fa-css3-alt"></i>
+                        <i class="fa-brands fa-css3-alt fa-8x"></i>
                         <p>CSS</p>
                     </div>
                     <div>
-                        <i class="fa-brands fa-sass"></i>
+                        <i class="fa-brands fa-sass fa-8x"></i>
                         <p>SASS</p>
                     </div>
                     <div>
-                        <i class="fa-brands fa-square-js"></i>
+                        <i class="fa-brands fa-square-js fa-8x"></i>
                         <p>JavaScript</p>
                     </div>
                     <div>
-                        <i class="fa-brands fa-react"></i>
+                        <i class="fa-brands fa-react fa-8x"></i>
                         <p>React</p>
                     </div>
                     <div>
-                        <i class="fa-brands fa-github"></i>
+                        <i class="fa-brands fa-github fa-8x"></i>
                         <p>GitHub</p>
                     </div>
                 </div>
