Filling out Projects styling

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="wrapper headerAlign">
             <h1>Lucas Pasqualoni</h1>
             <h2>GTA based web developer</h2>
-            <button>get in touch</button>
+            <a href="#">Get in touch</a>
         </div>
     </header>
     <main>
@@ -64,42 +64,42 @@
         </section>
         <section id="projects" class="projects">
             <div class="wrapper projectsAlign">
-                <h5>projects</h5>
-                <div>
+                <h4>projects</h4>
+                <div class="alignment">
                     <img src="projectImg.jpg" alt="placeholder image for project">
                     <div class="projectsBox">
                         <h5>project title here</h5>
                         <h6>languages used here</h6>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui, ex?</p>
-                        <button>view live</button>
-                        <button>view code</button>
+                        <a href="#">view live</a>
+                        <a href="#">view code</a>
                     </div>
                 </div>
-                <div>
+                <div class="alignmentReverse">
                     <img src="projectImg.jpg" alt="placeholder image for project">
                     <div class="projectsBox">
                         <h5>project title here</h5>
                         <h6>languages used here</h6>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui, ex?</p>
-                        <button>view live</button>
-                        <button>view code</button>
+                        <a href="#">view live</a>
+                        <a href="#">view code</a>
                     </div>
                 </div>
-                <div>
+                <div class="alignment">
                     <img src="projectImg.jpg" alt="placeholder image for project">
                     <div class="projectsBox">
                         <h5>project title here</h5>
                         <h6>languages used here</h6>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui, ex?</p>
-                        <button>view live</button>
-                        <button>view code</button>
+                        <a href="#">view live</a>
+                        <a href="#">view code</a>
                     </div>
                 </div>
             </div>
         </section>
         <section id="contact" class="contact">
             <div class="wrapper contactAlign">
-                <h7>get in touch</h7>
+                <h6>get in touch</h6>
                 <div class="navBar">
                     <i class="fa-brands fa-linkedin"></i>
                     <i class="fa-brands fa-github"></i>
@@ -116,7 +116,7 @@
     </main>
     <footer id="footer" class="footer">
         <div class="wrapper footerAlign">
-            <h8>Built in 2022 by Lucas Pasqualoni</h8>
+            <h6>Built in 2022 by Lucas Pasqualoni</h6>
         </div>
     </footer>
 </body>
