finishing up styling coontact bar

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <body>
     <nav id="nav" class="nav">
         <ul class="wrapper navBar">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Projects</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#header">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
     <header id="header" class="header">
@@ -36,27 +36,27 @@
                 <h4>skills</h4>
                 <div class="skillsFlex">
                     <div>
-                        <i class="fa-brands fa-html5 fa-8x"></i>
+                        <i class="fa-brands fa-html5 fa-6x"></i>
                         <p>HTML</p>
                     </div>
                     <div>
-                        <i class="fa-brands fa-css3-alt fa-8x"></i>
+                        <i class="fa-brands fa-css3-alt fa-6x"></i>
                         <p>CSS</p>
                     </div>
                     <div>
-                        <i class="fa-brands fa-sass fa-8x"></i>
+                        <i class="fa-brands fa-sass fa-6x"></i>
                         <p>SASS</p>
                     </div>
                     <div>
-                        <i class="fa-brands fa-square-js fa-8x"></i>
+                        <i class="fa-brands fa-square-js fa-6x"></i>
                         <p>JavaScript</p>
                     </div>
                     <div>
-                        <i class="fa-brands fa-react fa-8x"></i>
+                        <i class="fa-brands fa-react fa-6x"></i>
                         <p>React</p>
                     </div>
                     <div>
-                        <i class="fa-brands fa-github fa-8x"></i>
+                        <i class="fa-brands fa-github fa-6x"></i>
                         <p>GitHub</p>
                     </div>
                 </div>
@@ -68,29 +68,29 @@
                 <div class="alignment">
                     <img src="projectImg.jpg" alt="placeholder image for project">
                     <div class="projectsBox">
-                        <h5>project title here</h5>
-                        <h6>languages used here</h6>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui, ex?</p>
-                        <a href="#">view live</a>
-                        <a href="#">view code</a>
+                        <h5>Project One - Textilee</h5>
+                        <h6>HTML, CSS</h6>
+                        <p>A simple little task, meant to gauge skill retention - recreate the site from the provided pictures!</p>
+                        <a href="https://comforting-praline-e2402e.netlify.app/">view live</a>
+                        <a href="https://github.com/LucPasq/lucasPasqualoniProjectOne">view code</a>
                     </div>
                 </div>
                 <div class="alignmentReverse">
                     <img src="projectImg.jpg" alt="placeholder image for project">
                     <div class="projectsBox">
-                        <h5>project title here</h5>
-                        <h6>languages used here</h6>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui, ex?</p>
-                        <a href="#">view live</a>
-                        <a href="#">view code</a>
+                        <h5>Project Two - Pokeviewer</h5>
+                        <h6>HTML, CSS, JavaScript</h6>
+                        <p>A small app, testing pair programming skills, utilization of API's, and hosting knowledge! Gotta code em all!</p>
+                        <a href="https://visionary-croissant-e60f84.netlify.app/">view live</a>
+                        <a href="https://github.com/projectTwoPokeApi/pokeViewer">view code</a>
                     </div>
                 </div>
                 <div class="alignment">
                     <img src="projectImg.jpg" alt="placeholder image for project">
                     <div class="projectsBox">
-                        <h5>project title here</h5>
-                        <h6>languages used here</h6>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui, ex?</p>
+                        <h5>Assigment 2 - Javascript Practice</h5>
+                        <h6>HTML, CSS, Javascript</h6>
+                        <p>This is a placeholder - and MUST be changed and updated once I've completed more projects.</p>
                         <a href="#">view live</a>
                         <a href="#">view code</a>
                     </div>
@@ -100,17 +100,14 @@
         <section id="contact" class="contact">
             <div class="wrapper contactAlign">
                 <h6>get in touch</h6>
-                <div class="navBar">
-                    <i class="fa-brands fa-linkedin"></i>
-                    <i class="fa-brands fa-github"></i>
-                    <i class="fa-brands fa-twitter"></i>
-                    <i class="fa-solid fa-envelope"></i>
+                <div class="contactBar">
+                    <a href="#"><i class="fa-brands fa-linkedin fa-2x"></i></a>
+                    <a href="#"><i class="fa-brands fa-github fa-2x"></i></a>
+                    <a href="#"><i class="fa-brands fa-twitter fa-2x"></i></a>
+                    <a href="#"><i class="fa-solid fa-envelope fa-2x"></i></a>
                 </div>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quo tenetur, eaque optio aliquid sunt provident neque? Praesentium saepe quae doloremque!</p>
-                <div>
-
-                </div>
-                <button>submit</button>
+                <p>Questions? Comments? Just wanna say hello? Reach out to me on my socials!</p>
+                <!--STRETCH GOAL - CREATE SUBMISSION FORM.-->
             </div>
         </section>
     </main>
