finished up basic styling

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="wrapper headerAlign">
             <h1>Lucas Pasqualoni</h1>
             <h2>GTA based web developer</h2>
-            <a href="#">Get in touch</a>
+            <a href="#contact">Get in touch</a>
         </div>
     </header>
     <main>
