added basic media queries, tweaked html code, added more anchors for future use, set up JS framework for future use.

--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lucas Pasqualoni</title>
     <link rel="stylesheet" href="./styles/styles.css">
+    <!--Stylesheet Linkage-->
     <script src="https://kit.fontawesome.com/899a1041ac.js" crossorigin="anonymous"></script>
+    <!--FontAwesome Initialization-->
 </head>
 <body>
     <nav id="nav" class="nav">
+        <!--Navigation Section-->
         <ul class="wrapper navBar">
             <li><a href="#header">Home</a></li>
             <li><a href="#about">About</a></li>
@@ -17,56 +20,66 @@
             <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
+    <!--Navigation Section End-->
     <header id="header" class="header">
+        <!--Header Section-->
         <div class="wrapper headerAlign">
             <h1>Lucas Pasqualoni</h1>
             <h2>GTA based web developer</h2>
             <a href="#contact">Get in touch</a>
         </div>
     </header>
+    <!--Header Section End-->
     <main>
         <section id="about" class="about">
+            <!--About Section-->
             <div class="wrapper aboutAlign">
                 <h3>about me</h3>
                 <p>I'm a fresh-faced and eager new front-end developer based within the Greater Toronto Area, ready to ply the hard-earned skills I have acquired through the wonderful Juno College of Technology. I am a commited team-player who is ready and able to adapt to dynamic situations and am flexible in my work ethic - I work hard, and play even harder! When I'm not at my computer working away at a projct you can usually find me with a good book or watching some of my favourite TV shows like Better Call Saul, the Wire, Breaking Bad and various HBO miniseries.</p>
             </div>
         </section>
+        <!--About Section End-->
         <section id="skills" class="skills">
+            <!-- Skills Display Section-->
             <div class="wrapper skillsAlign">
                 <h4>skills</h4>
                 <div class="skillsFlex">
                     <div>
-                        <i class="fa-brands fa-html5 fa-6x"></i>
+                        <a href="#"><i class="fa-brands fa-html5 fa-6x"></i></a>
                         <p>HTML</p>
                     </div>
                     <div>
-                        <i class="fa-brands fa-css3-alt fa-6x"></i>
+                        <a href="#"><i class="fa-brands fa-css3-alt fa-6x"></i></a>
                         <p>CSS</p>
                     </div>
                     <div>
-                        <i class="fa-brands fa-sass fa-6x"></i>
+                        <a href="#"><i class="fa-brands fa-sass fa-6x"></i></a>
                         <p>SASS</p>
                     </div>
                     <div>
-                        <i class="fa-brands fa-square-js fa-6x"></i>
+                        <a href="#"><i class="fa-brands fa-square-js fa-6x"></i></a>
                         <p>JavaScript</p>
                     </div>
                     <div>
-                        <i class="fa-brands fa-react fa-6x"></i>
+                        <a href="#"><i class="fa-brands fa-react fa-6x"></i></a>
                         <p>React</p>
                     </div>
                     <div>
-                        <i class="fa-brands fa-github fa-6x"></i>
+                        <a href="#"><i class="fa-brands fa-github fa-6x"></i></a>
                         <p>GitHub</p>
                     </div>
                 </div>
             </div>
+            <!--Skills section End-->
         </section>
         <section id="projects" class="projects">
+            <!--Project Display Section-->
             <div class="wrapper projectsAlign">
                 <h4>projects</h4>
                 <div class="alignment">
+                    <!--Project Slot 1-->
                     <img src="projectImg.jpg" alt="placeholder image for project">
+                    <!--Placeholder image untill more suitable picture located-->
                     <div class="projectsBox">
                         <h5>Project One - Textilee</h5>
                         <h6>HTML, CSS</h6>
@@ -76,6 +89,7 @@
                     </div>
                 </div>
                 <div class="alignmentReverse">
+                    <!--Project Slot 2, unique class for reversed appearance-->
                     <img src="projectImg.jpg" alt="placeholder image for project">
                     <div class="projectsBox">
                         <h5>Project Two - Pokeviewer</h5>
@@ -85,6 +99,7 @@
                         <a href="https://github.com/projectTwoPokeApi/pokeViewer">view code</a>
                     </div>
                 </div>
+                <!--Project Slot 3-->
                 <div class="alignment">
                     <img src="projectImg.jpg" alt="placeholder image for project">
                     <div class="projectsBox">
@@ -97,7 +112,9 @@
                 </div>
             </div>
         </section>
+        <!--Project Section End-->
         <section id="contact" class="contact">
+            <!--Contact Section-->
             <div class="wrapper contactAlign">
                 <h6>get in touch</h6>
                 <div class="contactBar">
@@ -106,6 +123,7 @@
                     <a href="#"><i class="fa-brands fa-twitter fa-2x"></i></a>
                     <a href="#"><i class="fa-solid fa-envelope fa-2x"></i></a>
                 </div>
+                <!--Contact links for various social media-->
                 <p>Questions? Comments? Just wanna say hello? Reach out to me on my socials!</p>
                 <!--STRETCH GOAL - CREATE SUBMISSION FORM.-->
             </div>
@@ -115,6 +133,9 @@
         <div class="wrapper footerAlign">
             <h6>Built in 2022 by Lucas Pasqualoni</h6>
         </div>
+        <!--Footer-->
     </footer>
+    <script src="scripts.js"></script>
+    <!--Constructing JS framework for use in future-->
 </body>
 </html>
